# rust-audio-engine-workshop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  init.sh
audio_engine/: CMakeLists.txt  Cargo.toml  README.md  build.rs
audio_engine/include/audio_engine/: audio_engine.h
audio_engine/src/: cmd.rs  ffi.rs  lib.rs  main.rs  stream.rs  wasm.rs
audio_engine/src/bindings/: ffi.rs  mod.rs  py.rs  wasm.rs
audio_engine/src/engine/: mod.rs
dsp_lab/: README.md  pyproject.toml
dsp_lab/lib/: audio_engine
dsp_lab/tests/: test_dsp_lab.py
slides/: README.md  package.json
slides/src/: build.js
vst_plugin/: .clang-format  Makefile  README.md  package.json
vst_plugin/scripts/: build.js  generate.js  open.js
vst_plugin/scripts/lib/: project.js
vst_plugin/src/: main.cpp
vst_plugin/tests/: integration.cpp
web_app/: package.json  vite.config.js
web_app/src/: App.tsx  StandaloneEngine.tsx  WebBasedEngine.tsx
