[package]
name = "audio_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "audio_engine"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = "1.0.52"
structopt = "0.3.25"
# An optional dependency will create a feature
# with the same name which, by default, is inactive
cpal = { version = "0.13.4", optional = true }
pyo3 = { version = "0.15.1", features = ["extension-module"], optional = true }
wasm-bindgen-test = "0.3.29"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.78"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.29"

[build-dependencies]
cbindgen = "0.20.0"

[features]
default = ["cpal"]
wasm = ["cpal/wasm-bindgen"]
ffi = []

[profile.release]
lto = true
