[package]
name = "audio_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "audio_engine"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = "1.0.56"
structopt = "0.3.26"
# An optional dependency will create a feature
# with the same name which, by default, is inactive
cpal = { version = "0.13.4", optional = true }

[build-dependencies]
cbindgen = "0.21.0"

[features]
default = ["cpal"]
ffi = []

[profile.release]
lto = true
